// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppLogo > snapshots > renders with custom name 1`] = `
<div>
  <span
    class="font-semibold"
  >
    Custom App
  </span>
</div>
`;

exports[`AppLogo > snapshots > renders with default name 1`] = `
<div>
  <span
    class="font-semibold"
  >
    Imanisa Finance
  </span>
</div>
`;
